cabal-version:      3.4
name:               oju
version:            0.0.1
synopsis:           A stream tracing server for distributed applications
-- description:
homepage:           https://github.com/oju-dev/oju
license:            MIT
license-file:       LICENSE
author:             OJU DEV
maintainer:         contactoju@gmail.com
-- copyright:
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

common default-extensions
        default-extensions:
                OverloadedStrings,
                BangPatterns,
                NumericUnderscores,
                DeriveGeneric,
                DeriveAnyClass


library
    import:           warnings, default-extensions
    exposed-modules:  Config, Requester
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.19.0.0,
        aeson,
        aeson-casing,
        text,
        bytestring,
        serialise,
        cborg,
        containers
    hs-source-dirs:   src
    default-language: Haskell2010

executable oju
    import:           warnings, default-extensions
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.19.0.0,
        oju

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite oju-test
    import:           warnings, default-extensions
    default-language: Haskell2010
    other-modules:
      ConfigTest,
      RequesterTest
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.19.0.0,
        oju,
        HUnit,
        bytestring,
